--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-download-link": "^2.3.0",
     "react-mdl": "^2.1.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
