--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-download-link": "^2.3.0",
     "react-mdl": "^2.1.0",
+    "react-modal-image": "^2.5.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "reactstrap": "^8.5.1",
