--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "netlify-cli": "^2.61.2",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
@@ -15,7 +16,7 @@
     "react-download-link": "^2.3.0",
     "react-mdl": "^2.1.0",
     "react-modal-image": "^2.5.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.16",
     "reactstrap": "^8.5.1",
     "tailwindcss": "^1.4.6"
